[package]
name = "python"
version = "0.3.0-pre"
authors = ["Yuxuan Song <almey0721@gmail.com>", "Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "Self-contained Python single binary"
readme = "README.md"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dependencies.pyembed]
version = "0.23.0"
default-features = false
features = ["serialization", "zipimport"]

[dev-dependencies]
assert_cmd = "2.0"
glob = "0.3"
libtest-mimic = "0.6"
predicates = "2.0"
tempfile = "3.2"